<resources>
    <string name="app_name">Sudoku</string>
    <string name="android_sudoku">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
        Sudoku is logic - base number placement puzzle.
        Start with 9 x 9 grid with 3 x 3 boxes
        (Also call <i>blocks</i>) contains the digits
        1 to 9 exactly game.</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Sudoku Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="keypad_title">Hint Pad</string>
    <string name="no_moves_label">NO MOVES</string>
</resources>
